--- a/local_modules/docs/index.css
+++ b/local_modules/docs/index.css
@@ -12,6 +12,7 @@
   order: 2;
   padding: 30px;
   z-index: 2;
+  position: relative;
 }
 
 /**
@@ -108,8 +109,7 @@
  * Images.
  */
 
-.docs-articles p > img,
-.docs-articles a > img {
+.docs-articles p > img {
   max-width: 100%;
   margin-top: 20px;
   border: 1px solid $color-grey_lighter;
